--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "badge-maker": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
